<?xml version="1.0"?>
<package format="2">
    <name>cover</name>
    <version>0.4.0</version>
    <description>The cover package contains code for efficient path checking
    </description>

    <maintainer email="dorezyuk@magazino.eu">Dima Dorezyuk</maintainer>
    <maintainer email="sattar@magazino.eu">Muhammad Hamza Sattar</maintainer>
    <maintainer email="kuemmerle@magazino.eu">Rainer Kuemmerle</maintainer>

    <license>Magazino GmbH</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>clang-tidy</buildtool_depend>

    <depend>costmap_2d</depend>
    <depend>roscpp</depend>
    <depend>libgeos++-dev</depend>
    <!-- only for testing -->
    <depend>base_local_planner</depend>
    
    <test_depend>libopencv-dev</test_depend>
</package>
