<?xml version="1.0"?>
<package format="2">
    <name>cover</name>
    <version>0.5.1</version>
    <description>The cover package contains code for efficient path checking
    </description>

    <maintainer email="dorezyuk@magazino.eu">Dima Dorezyuk</maintainer>
    <maintainer email="sattar@magazino.eu">Muhammad Hamza Sattar</maintainer>
    <maintainer email="kuemmerle@magazino.eu">Rainer Kuemmerle</maintainer>

    <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>clang-tidy</buildtool_depend>

    <!-- Base-dependency -->
    <depend>boost</depend>

    <!-- Ros-dependency -->
    <depend>costmap_2d</depend>
    <depend>roscpp</depend>

    <!-- only for testing / benchmarking -->
    <test_depend>base_local_planner</test_depend>
    <test_depend>libopencv-dev</test_depend>
    <test_depend>nav_grid_iterators</test_depend>
</package>
